force-app/main/default/objects/Gasto__c/Gasto__c.object-meta.xml
<CustomObject>
    <label>Gasto</label>
    <nameField>
        <displayFormat>G - {0000}</displayFormat>
        <label>Gasto Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Gastos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>