force-app/main/default/objects/Gasto__c/fields/Categoria__c.field-meta.xml
<CustomField>
    <fullName>Categoria__c</fullName>
    <label>Categoria</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diezmo</fullName>
                <default>true</default>
                <label>Diezmo</label>
            </value>
            <value>
                <fullName>Transporte</fullName>
            </value>
            <value>
                <fullName>Entretenimiento</fullName>
            </value>
            <value>
                <fullName>Alquiler</fullName>
            </value>
            <value>
                <fullName>Alimentos</fullName>
            </value>
            <value>
                <fullName>Servicios</fullName>
            </value>
            <value>
                <fullName>Celulares</fullName>
            </value>
            <value>
                <fullName>Deudas</fullName>
            </value>
            <value>
                <fullName>Varios</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Ofrendas</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>