force-app/main/default/objects/Gasto__c/fields/Disponible__c.field-meta.xml
<CustomField>
    <fullName>Disponible__c</fullName>
    <formula>CASE( Categoria__c , 
&#39;Alimentos&#39;,  Mes__r.Disponible_Alimentos__c , 
&#39;Alquiler&#39;,  Mes__r.Disponible_Alquiler__c ,
&#39;Transporte&#39;,  Mes__r.Disponible_Transporte__c , 
&#39;Diezmo&#39;,  Mes__r.Disponible_Diezmo_y_Ofrendas__c ,
&#39;Deudas&#39;,  Mes__r.Disponible_Deudas__c ,
&#39;Entretenimiento&#39;,  Mes__r.Disponible_Entretenimiento__c ,
&#39;Varios&#39;,  Mes__r.Disponible_Varios__c ,
&#39;Otros&#39;,  Mes__r.Disponible_Otros__c ,
&#39;Servicios&#39;,  Mes__r.Disponible_Servicios__c ,
&#39;Ofrendas&#39;,  Mes__r.Disponible_Diezmo_y_Ofrendas__c ,
&#39;Celulares&#39; , Mes__r.Disponible_Celulares__c ,
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disponible</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>