force-app/main/default/objects/Gasto__c/fields/Mes__c.field-meta.xml
<CustomField>
    <fullName>Mes__c</fullName>
    <label>Mes</label>
    <referenceTo>Mes__c</referenceTo>
    <relationshipLabel>Gastos</relationshipLabel>
    <relationshipName>Gastos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>