force-app/main/default/objects/Gasto__c/fields/Monto__c.field-meta.xml
<CustomField>
    <fullName>Monto__c</fullName>
    <label>Monto</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>