force-app/main/default/objects/Gasto__c/fields/Monto_Dependiente__c.field-meta.xml
<CustomField>
    <fullName>Monto_Dependiente__c</fullName>
    <formula>IF(  ISPICKVAL(Categoria__c, &#39;Diezmo&#39;) ,  Mes__r.Ingresos_Totales__c * 0.1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monto Dependiente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>