force-app/main/default/objects/Gasto__c/fields/Nota__c.field-meta.xml
<CustomField>
    <fullName>Nota__c</fullName>
    <label>Nota</label>
    <length>50</length>
    <type>Text</type>
</CustomField>