force-app/main/default/objects/Gasto__c/listViews/Gastos_Del_Mes.listView-meta.xml
<ListView>
    <fullName>Gastos_Del_Mes</fullName>
    <columns>Categoria__c</columns>
    <columns>Monto__c</columns>
    <columns>Pago__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Gastos Del Mes</label>
</ListView>